taking care of business

--- a/src/models/create_models/svm_model_discard.ipynb
+++ b/src/models/create_models/svm_model_discard.ipynb
@@ -2,9 +2,277 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Making sets 0\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 0\n",
+      "linear: 0.8350515463917526\n",
+      "Making sets 1\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 1\n",
+      "linear: 0.8556701030927835\n",
+      "Making sets 2\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 2\n",
+      "linear: 0.8556701030927835\n",
+      "Making sets 3\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 3\n",
+      "linear: 0.8144329896907216\n",
+      "Making sets 4\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 4\n",
+      "linear: 0.7835051546391752\n",
+      "Making sets 5\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 5\n",
+      "linear: 0.8144329896907216\n",
+      "Making sets 6\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 6\n",
+      "linear: 0.8041237113402062\n",
+      "Making sets 7\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 7\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 7\n",
+      "linear: 0.8762886597938144\n",
+      "Making sets 8\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 8\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 8\n",
+      "linear: 0.8041237113402062\n",
+      "Making sets 9\n",
+      " working on anger\n",
+      " working on contempt\n",
+      " working on disgust\n",
+      " working on fear\n",
+      " working on happiness\n",
+      " working on neutral\n",
+      " working on sadness\n",
+      " working on surprise\n",
+      "training SVM linear 9\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cmeaton/anaconda3/envs/affective_image/lib/python3.6/site-packages/sklearn/svm/base.py:196: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "getting accuracies 9\n",
+      "linear: 0.8041237113402062\n",
+      "Mean value lin svm: 0.8247422680412371\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import glob\n",
@@ -20,8 +288,10 @@
     "emotions = [\"anger\", \"contempt\", \"disgust\", \"fear\", \"happiness\", \"neutral\", \"sadness\", \"surprise\"] #Emotion list\n",
     "clahe = cv2.createCLAHE(clipLimit=2.0, tileGridSize=(8,8))\n",
     "detector = dlib.get_frontal_face_detector()\n",
-    "predictor = dlib.shape_predictor(\"/Users/cmeaton/Documents/code/ds/METIS/sea19_ds7_workingdir/project_5/src/models/shape_predictor_68_face_landmarks.dat\")\n",
+    "predictor = dlib.shape_predictor(\"/Users/cmeaton/Documents/code/ds/METIS/sea19_ds7_workingdir/project_5/src/models/saved_models/face_algorithms/shape_predictor_68_face_landmarks.dat\")\n",
     "clf = SVC(kernel='linear', probability=True, tol=1e-3)#, verbose = True) #Set the classifier as a support vector machines with polynomial kernel\n",
+    "clf_1 = SVC(kernel='poly', probability=True, tol=1e-3)#, verbose = True) #Set the classifier as a support vector machines with polynomial kernel\n",
+    "\n",
     "data = {} #Make dictionary for all values\n",
     "#data['landmarks_vectorised'] = []\n",
     "\n",
@@ -105,16 +375,76 @@
     "    npar_train = np.array(training_data) #Turn the training set into a numpy array for the classifier\n",
     "    npar_trainlabs = np.array(training_labels)\n",
     "    print(\"training SVM linear %s\" %i) #train SVM\n",
-    "    clf.fit(npar_train, training_labels)\n",
+    "    clf_1.fit(npar_train, training_labels)\n",
     "    print(\"getting accuracies %s\" %i) #Use score() function to get accuracy\n",
     "    npar_pred = np.array(prediction_data)\n",
-    "    pred_lin = clf.score(npar_pred, prediction_labels)\n",
+    "    pred_lin = clf_1.score(npar_pred, prediction_labels)\n",
     "    print(f\"linear: {pred_lin}\")\n",
     "    accur_lin.append(pred_lin) #Store accuracy in a list\n",
     "print(\"Mean value lin svm: %s\" %np.mean(accur_lin)) #FGet mean accuracy of the 10 runs\n",
     "\n",
-    "filename = 'lin_svm_model_means.sav'\n",
-    "pickle.dump(clf, open(filename, 'wb'))"
+    "# filename = 'lin_svm_model_means.sav'\n",
+    "# pickle.dump(clf, open(filename, 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[30m\u001b[43mEmotion\u001b[m\u001b[m/        \u001b[1m\u001b[34mdata_set\u001b[m\u001b[m/       \u001b[1m\u001b[34msource_emotion\u001b[m\u001b[m/ \u001b[1m\u001b[34mtest\u001b[m\u001b[m/\r\n",
+      "\u001b[30m\u001b[43mFACS\u001b[m\u001b[m/           \u001b[1m\u001b[34msorted_set\u001b[m\u001b[m/     \u001b[1m\u001b[34msource_images\u001b[m\u001b[m/  \u001b[1m\u001b[34mtrain\u001b[m\u001b[m/\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'lin_svm_model.sav'\n",
+    "loaded = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "  kernel='linear', max_iter=-1, probability=True, random_state=None,\n",
+       "  shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded"
    ]
   },
   {
